plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.5'
    id "com.github.johnrengelman.shadow" version "7.1.2"
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'dev.idan'
sourceCompatibility = '17'

def jdaVersion = '5.0.0-beta.11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url "https://jitpack.io"
        content {
            includeGroup "com.github.gitlab4j"
        }
    }
}

springBoot {
    mainClass = "dev.idan.bgbot.BgbotApplication"
}

dependencies {
    // JDA
    implementation("net.dv8tion:JDA:$jdaVersion")

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Spring boot staff
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // Test
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
}

tasks.named('test') {
    useJUnitPlatform()
}